--- a/client/templates/includes/header.html
+++ b/client/templates/includes/header.html
@@ -2,7 +2,7 @@
  	<nav class="navbar navbar-default" role="navigation">
  		<div class="container-fluid">
  			<div class="navbar-header">
- 				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#nagivation">
+ 				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navigation">
  				<span class="sr-only">Toggle navigation</span>
  				<span class="icon-bar"></span>
  				<span class="icon-bar"></span>
@@ -10,10 +10,13 @@
  				</button>
  				<a class="navbar-brand" href="{{pathFor 'postsList'}}">Microscope</a>
  			</div>
- 			<div class="collapse navbar-collapse" id="nagivation">
- 			<ul class="nav navbar-nav navbar-right">
- 				{{> loginButtons}}	
- 			</ul>	
+ 			<div class="collapse navbar-collapse" id="navigation">
+	 			<ul class="nav navbar-nav">
+	 				<li><a href="{{pathFor 'postSubmit'}}">Submit Post</a></li>
+	 			</ul>
+	 			<ul class="nav navbar-nav navbar-right">
+	 				{{> loginButtons}}	
+	 			</ul>	
  			</div>
  		</div>
  	</nav>
