--- a/client/templates/includes/header.html
+++ b/client/templates/includes/header.html
@@ -13,6 +13,9 @@
  			<div class="collapse navbar-collapse" id="navigation">
 	 			<ul class="nav navbar-nav">
 	 				{{#if currentUser}}<li><a href="{{pathFor 'postSubmit'}}">Submit Post</a></li>
+	 				<li class="dropdown">
+	 				{{> notification}}
+	 				</li>
 	 				{{/if}}
 	 			</ul>
 	 			<ul class="nav navbar-nav navbar-right">
