--- a/client/templates/includes/header.html
+++ b/client/templates/includes/header.html
@@ -14,7 +14,7 @@
 	 			<ul class="nav navbar-nav">
 	 				{{#if currentUser}}<li><a href="{{pathFor 'postSubmit'}}">Submit Post</a></li>
 	 				<li class="dropdown">
-	 				{{> notification}}
+	 				{{> notifications}}
 	 				</li>
 	 				{{/if}}
 	 			</ul>
